--- a/FinalProject/final_shiny_update1(1).Rmd
+++ b/FinalProject/final_shiny_update1(1).Rmd
@@ -34,8 +34,6 @@ ui <- fluidPage(
                         choices = NULL), 
             selectInput("corrSelect1", "Select X Variable for Regression:",                                      choices = NULL),
             selectInput("corrSelect2", "Select Y Variable for Regression:", 
-                        choices = NULL),
-            selectInput("tTestSelect", "Select Variable for Dependent t-Test:", 
                         choices = NULL)
             
         ),
@@ -43,8 +41,7 @@ ui <- fluidPage(
             plotOutput("histPlot"),
             plotOutput("boxPlot"),
             plotOutput("corrPlot"),
-            verbatimTextOutput("regressionSummary"),
-            verbatimTextOutput("tTestResult")
+            verbatimTextOutput("regressionSummary")
         )
     )
 )
@@ -92,7 +89,6 @@ server <- function(input, output, session) {
         updateSelectInput(session, "boxSelect", choices = names(df)[-1])
         updateSelectInput(session, "corrSelect1", choices = names(df))
         updateSelectInput(session, "corrSelect2", choices = names(df)[-1])
-        updateSelectInput(session, "tTestSelect", choices = names(df2)[-1])
     })
     
     
@@ -139,20 +135,7 @@ server <- function(input, output, session) {
         summ(lm_model, digits = 3)
     })
     
-  output$tTestResult <- renderPrint({
-    req(input$tTestSelect)
-    df2 <- dataset2
-    
-   
-    pre_2008 <- df2[df2$Year <= 2008, input$tTestSelect]
-    post_2008 <- df2[df2$Year > 2008, input$tTestSelect]
-    
-    
-    t_test_result <- t.test(pre_2008, post_2008, paired = TRUE)
-    
-   
-    t_test_result
-  })
+  
 }
 ```
 
